# sdf-implementations

./: .gitignore  Cargo.toml  LICENSE  README.md  cfg.toml.example
.github/workflows/: ci.yml
sdf-consumer/: Cargo.toml  README.md  test.sh
sdf-consumer/src/: cli.rs  consumer.rs  error.rs  main.rs  operation.rs  util.rs
sdf-consumer/src/protocol_mappings/: coap.rs  common.rs  http.rs  mod.rs
sdf-consumer/src/protocols/: coap.rs  coaps.rs  common.rs  http.rs  mod.rs
sdf-data-structures/: Cargo.toml  README.md
sdf-data-structures/src/: constants.rs  error.rs  instance.rs  lib.rs  supplement.rs  traits.rs  util.rs
sdf-data-structures/src/model/: common_qualities.rs  info_block.rs  mod.rs  schema_definition.rs  sdf_context.rs  sdf_data.rs  sdf_object.rs  sdf_thing.rs
sdf-data-structures/src/model/affordances/: mod.rs  sdf_action.rs  sdf_event.rs  sdf_property.rs
sdf-data-structures/src/model/protocol_mappings/: coap.rs  http.rs  mod.rs
sdf-data-structures/tests/: instance.rs  model.rs
sdf-manager/: Cargo.toml  README.md
sdf-manager/src/: cli.rs  main.rs
sdf-repository/: .env.example  Cargo.toml  README.md
sdf-repository/migrations/: 20260404172425_create_models.sql
sdf-repository/src/: config.rs  error.rs  logic.rs  main.rs  models.rs  traits.rs  validators.rs
sdf-repository/src/handlers/: delete_models.rs  get_model.rs  get_models.rs  mod.rs  post_model.rs  post_supplement.rs
sdf-repository/src/models/: config.rs  in_memory.rs  initial_models.rs  mod.rs  postgres.rs  query_parameters.rs  semantic_version.rs
sdf-repository/src/persistence/: in_memory.rs  initial_models.rs  mod.rs  postgres.rs
sdf-thing/: .gitignore  Cargo.toml  README.md  build.rs  cfg.toml.example  sdkconfig.defaults
sdf-thing/.cargo/: config.toml
sdf-thing/src/: configuration_data.rs  main.rs
