[workspace]
members = ["sdf-repository", "sdf-data-structures", "sdf-manager", "sdf-consumer"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
json-merge-patch = "=0.0.1"
json-pointer = "0.3.4"
