[package]
name = "sdf-repository"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["sqlx"]
sqlx = ["dep:sqlx"]

[dependencies]
actix-web = "4.12.1"
env_logger = "0.11.8"
sdf-data-structures = { path = "../sdf-data-structures", features = ["utoipa"]}
semver = "1.0.27"
json-merge-patch.workspace = true
json-pointer.workspace = true
serde.workspace = true
serde_json.workspace = true
actix-web-httpauth = "0.8.2"
log = "0.4.29"
utoipa-actix-web = "0.1.2"
utoipa = { version = "5.4.0", features = ["actix_extras", "macros", "debug"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
toml-cfg = "0.2.0"
thiserror.workspace = true
dotenv = "0.15.0"
dotenv_config = "0.2.3"
sqlx = { version = "0.8.6", optional = true, features = ["runtime-tokio-rustls", "derive", "postgres", "macros", "uuid"] }
