[package]
name = "sdf-thing"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.77"

[workspace]

[[bin]]
name = "sdf-thing"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["udp", "dtls"]
udp = []
dtls = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51" }
esp-idf-hal  = "0.45.2"
esp-idf-sys = { version = "0.36.1" }
libcoap-rs = { version = "0.2.2" }
sdf-data-structures = { version = "0.1.0", path = "../sdf-data-structures" }
toml-cfg = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
shtcx = "1.0.0"
uuid = { version = "1.20.0", features = ["v4"] }

[patch.crates-io]
libcoap-rs = { git = "https://github.com/namib-project/libcoap-rs.git", rev = "384746a6c247756af6c0bf2212fecf4220878804"}

[build-dependencies]
embuild = "0.33"
toml-cfg = "0.2.0"
